[package]
name = "wr"
version = "0.1.0"
description = "Track your physical recovery from working out"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["cargo"] }
directories = "6.0.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
